@@ -1,3 +1,6 @@
+2008-07-09 arjenmarkus@sourceforge.net
+   * tests/tools/check_reals.f90: drop the elemental keyword
+
 2008-07-04 arjenmarkus@sourceforge.net
    * src/tools: added a new program (editcode): specific preprocessing tasks
    * tests/tools: small test for the preprocessing program
